force-app/main/default/objects/MUSW__Application2__c/MUSW__Application2__c.object-meta.xml
<CustomObject>
    <label>Application</label>
    <nameField>
        <label>Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Applications</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>