force-app/main/default/objects/MUSW__Application2__c/fields/Agent_Authorization__c.field-meta.xml
<CustomField>
    <fullName>Agent_Authorization__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Agent Authorization</label>
    <type>Checkbox</type>
</CustomField>