force-app/main/default/objects/MUSW__Application2__c/fields/CVRD_1st_Reading__c.field-meta.xml
<CustomField>
    <fullName>CVRD_1st_Reading__c</fullName>
    <label>1st Reading</label>
    <type>Date</type>
</CustomField>