force-app/main/default/objects/MUSW__Application2__c/fields/CVRD_2nd_Reading__c.field-meta.xml
<CustomField>
    <fullName>CVRD_2nd_Reading__c</fullName>
    <label>2nd Reading</label>
    <type>Date</type>
</CustomField>