force-app/main/default/objects/MUSW__Application2__c/fields/CVRD_3rd_Reading__c.field-meta.xml
<CustomField>
    <fullName>CVRD_3rd_Reading__c</fullName>
    <label>3rd Reading</label>
    <type>Date</type>
</CustomField>