force-app/main/default/objects/MUSW__Application2__c/fields/CVRD_Address2__c.field-meta.xml
<CustomField>
    <fullName>CVRD_Address2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Address 2</label>
    <referenceTo>MUSW__Address__c</referenceTo>
    <relationshipLabel>Applications (Address 2)</relationshipLabel>
    <relationshipName>Applications</relationshipName>
    <type>Lookup</type>
</CustomField>