force-app/main/default/objects/MUSW__Application2__c/fields/CVRD_Address_3__c.field-meta.xml
<CustomField>
    <fullName>CVRD_Address_3__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Address 3</label>
    <referenceTo>MUSW__Address__c</referenceTo>
    <relationshipLabel>Applications (Address 3)</relationshipLabel>
    <relationshipName>Applications1</relationshipName>
    <type>Lookup</type>
</CustomField>