force-app/main/default/objects/MUSW__Application2__c/fields/CVRD_Adoption_Date__c.field-meta.xml
<CustomField>
    <fullName>CVRD_Adoption_Date__c</fullName>
    <label>Adoption Date</label>
    <type>Date</type>
</CustomField>