force-app/main/default/objects/MUSW__Application2__c/fields/CVRD_Application_Created_Date__c.field-meta.xml
<CustomField>
    <fullName>CVRD_Application_Created_Date__c</fullName>
    <description>date of application submitted</description>
    <inlineHelpText>Please enter the date of application submitted</inlineHelpText>
    <label>Application Created Date</label>
    <type>Date</type>
</CustomField>