force-app/main/default/objects/MUSW__Application2__c/fields/CVRD_Application_Created_Year__c.field-meta.xml
<CustomField>
    <fullName>CVRD_Application_Created_Year__c</fullName>
    <formula>TEXT(YEAR(CVRD_Application_Created_Date__c))</formula>
    <label>Application Created Year</label>
    <type>Text</type>
</CustomField>