force-app/main/default/objects/MUSW__Application2__c/fields/CVRD_Application_Status_Comments__c.field-meta.xml
<CustomField>
    <fullName>CVRD_Application_Status_Comments__c</fullName>
    <inlineHelpText>STATUS/MOTI STATUS (sub only) - Enter application status</inlineHelpText>
    <label>Application Status Comments</label>
    <length>255</length>
    <type>Text</type>
</CustomField>