force-app/main/default/objects/MUSW__Application2__c/fields/CVRD_BYLAW_RZ_OCP__c.field-meta.xml
<CustomField>
    <fullName>CVRD_BYLAW_RZ_OCP__c</fullName>
    <label>Bylaw No.</label>
    <length>255</length>
    <type>Text</type>
</CustomField>