force-app/main/default/objects/MUSW__Application2__c/fields/CVRD_Date_assigned_to_planner__c.field-meta.xml
<CustomField>
    <fullName>CVRD_Date_assigned_to_planner__c</fullName>
    <description>Captures date assigned to the planner</description>
    <inlineHelpText>Planner assigned date</inlineHelpText>
    <label>Date assigned to planner</label>
    <type>Date</type>
</CustomField>