force-app/main/default/objects/MUSW__Application2__c/fields/CVRD_DS_Application_Number_redirect__c.field-meta.xml
<CustomField>
    <fullName>CVRD_DS_Application_Number_redirect__c</fullName>
    <formula>HYPERLINK(&quot;https://cvrd--qa.sandbox.my.site.com/CVRDCitizenshipPortal/s/open-application-details?id=&quot;&amp;Id ,  Name , &quot;_self&quot;)</formula>
    <label>Application Number</label>
    <type>Text</type>
</CustomField>