force-app/main/default/objects/MUSW__Application2__c/fields/CVRD_DS_Application_Status__c.field-meta.xml
<CustomField>
    <fullName>CVRD_DS_Application_Status__c</fullName>
    <description>Application Status for public view.</description>
    <label>Application Status</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>MUSW__Type2__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Under Review</fullName>
            </value>
            <value>
                <fullName>On Hold</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Issued</fullName>
            </value>
            <value>
                <fullName>Denied</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
            <value>
                <fullName>1st, 2nd and 3rd reading - No Public Hearing Held</fullName>
            </value>
            <value>
                <fullName>1st, 2nd and 3rd reading - Public Hearing Held</fullName>
            </value>
            <value>
                <fullName>1st and 2nd reading - No Public Hearing Required</fullName>
            </value>
            <value>
                <fullName>1st and 2nd reading - Public Hearing Held</fullName>
            </value>
            <value>
                <fullName>1st and 2nd reading - Public Hearing Pending</fullName>
            </value>
            <value>
                <fullName>1st reading</fullName>
            </value>
            <value>
                <fullName>Adopted</fullName>
            </value>
            <value>
                <fullName>Board to Provide Comments - Public Notice Underway</fullName>
            </value>
            <value>
                <fullName>Comments Provided</fullName>
            </value>
            <value>
                <fullName>Forwarded to the ALC</fullName>
            </value>
            <value>
                <fullName>Forwarded to the ALC with comments</fullName>
            </value>
            <value>
                <fullName>Forwarded to the ALC with recommendation of approval</fullName>
            </value>
            <value>
                <fullName>Letter of Compliance sent to MOTI</fullName>
            </value>
            <value>
                <fullName>No Comments Provided</fullName>
            </value>
            <value>
                <fullName>Not forwarded to the ALC</fullName>
            </value>
            <value>
                <fullName>PLR Extension Issued</fullName>
            </value>
            <value>
                <fullName>PLR Issued</fullName>
            </value>
            <value>
                <fullName>PLRS Issued</fullName>
            </value>
            <value>
                <fullName>Referral Report sent to MOTI</fullName>
            </value>
            <value>
                <fullName>Revised Layout Under Review</fullName>
            </value>
            <value>
                <fullName>Statement of Concurrence Sent</fullName>
            </value>
            <value>
                <fullName>Statement of Non-concurrence Sent</fullName>
            </value>
            <value>
                <fullName>Updated Referral Report sent to MOTI</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>