force-app/main/default/objects/MUSW__Application2__c/fields/CVRD_DS_Available_for_Public_Notice__c.field-meta.xml
<CustomField>
    <fullName>CVRD_DS_Available_for_Public_Notice__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Available for Public Notice</label>
    <type>Checkbox</type>
</CustomField>