force-app/main/default/objects/MUSW__Application2__c/fields/CVRD_DS_CO_CFO_File_Uploaded__c.field-meta.xml
<CustomField>
    <fullName>CVRD_DS_CO_CFO_File_Uploaded__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CO/CFO File Uploaded?</label>
    <type>Checkbox</type>
</CustomField>