force-app/main/default/objects/MUSW__Application2__c/fields/CVRD_DS_Commercial_Or_Industrial_Purpose__c.field-meta.xml
<CustomField>
    <fullName>CVRD_DS_Commercial_Or_Industrial_Purpose__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>The site is or has been used for Commercial Or Industrial Purposes.</inlineHelpText>
    <label>Commercial Or Industrial Purposes</label>
    <type>Checkbox</type>
</CustomField>