force-app/main/default/objects/MUSW__Application2__c/fields/CVRD_DS_Completed_Approval__c.field-meta.xml
<CustomField>
    <fullName>CVRD_DS_Completed_Approval__c</fullName>
    <label>Completed Approval</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>DM Approval</fullName>
            </value>
            <value>
                <fullName>GM Approval</fullName>
            </value>
            <value>
                <fullName>CO/CFO Approval</fullName>
            </value>
            <value>
                <fullName>Board Approval</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>