force-app/main/default/objects/MUSW__Application2__c/fields/CVRD_DS_create_Public_Notice__c.field-meta.xml
<CustomField>
    <fullName>CVRD_DS_create_Public_Notice__c</fullName>
    <formula>IF(  CVRD_DS_Available_for_Public_Notice__c ,  HYPERLINK(&apos;/s/public-notification?recordId=&apos;&amp;Id&amp;&apos;&amp;Appname=&apos;&amp;Name, &apos;CLICK HERE&apos;,&apos;_blank&apos;) , &apos;This application is not available for public comments&apos;)</formula>
    <label>Submit Response to Public Notice</label>
    <type>Text</type>
</CustomField>