force-app/main/default/objects/MUSW__Application2__c/fields/CVRD_DS_Crown_File_Number__c.field-meta.xml
<CustomField>
    <fullName>CVRD_DS_Crown_File_Number__c</fullName>
    <label>Crown File Number</label>
    <length>30</length>
    <type>Text</type>
</CustomField>