force-app/main/default/objects/MUSW__Application2__c/fields/CVRD_DS_Description__c.field-meta.xml
<CustomField>
    <fullName>CVRD_DS_Description__c</fullName>
    <inlineHelpText>Letter of Rationale and related documents can be provided at the Upload Documents stage of the application</inlineHelpText>
    <label>Application Proposal Description</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>