force-app/main/default/objects/MUSW__Application2__c/fields/CVRD_DS_DPA_Sub_Type__c.field-meta.xml
<CustomField>
    <fullName>CVRD_DS_DPA_Sub_Type__c</fullName>
    <label>Sub Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Environmental and Hazard(DPA 1-7)</fullName>
            </value>
            <value>
                <fullName>Amendment/Extension(DPA 1-13)</fullName>
            </value>
            <value>
                <fullName>Conservation/GHG reduction(DPA 13)</fullName>
            </value>
            <value>
                <fullName>Agricultural(DPA 8)</fullName>
            </value>
            <value>
                <fullName>Form and Character - Signs(DPA 9-12)</fullName>
            </value>
            <value>
                <fullName>Form and Character (DPA 9-12)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>