force-app/main/default/objects/MUSW__Application2__c/fields/CVRD_DS_Email__c.field-meta.xml
<CustomField>
    <fullName>CVRD_DS_Email__c</fullName>
    <formula>&apos;ds@cvrd.bc.ca&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CVRD Email</label>
    <type>Text</type>
</CustomField>