force-app/main/default/objects/MUSW__Application2__c/fields/CVRD_DS_High_Water_Mark__c.field-meta.xml
<CustomField>
    <fullName>CVRD_DS_High_Water_Mark__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>30 metres of the high water mark of any water features</inlineHelpText>
    <label>High Water Mark</label>
    <type>Checkbox</type>
</CustomField>