force-app/main/default/objects/MUSW__Application2__c/fields/CVRD_DS_HighWaterMark__c.field-meta.xml
<CustomField>
    <fullName>CVRD_DS_HighWaterMark__c</fullName>
    <inlineHelpText>30 metres of the high water mark of any water features.</inlineHelpText>
    <label>High Water Mark</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CVRD_DS_YES_NO</valueSetName>
    </valueSet>
</CustomField>