force-app/main/default/objects/MUSW__Application2__c/fields/CVRD_DS_Is_Top_of_a_Ravine_Bank__c.field-meta.xml
<CustomField>
    <fullName>CVRD_DS_Is_Top_of_a_Ravine_Bank__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>A ravine or within 30 metres of the top of a Ravine Bank</inlineHelpText>
    <label>Is Top of a Ravine Bank</label>
    <type>Checkbox</type>
</CustomField>