force-app/main/default/objects/MUSW__Application2__c/fields/CVRD_DS_is_TopofaRavine_Bank__c.field-meta.xml
<CustomField>
    <fullName>CVRD_DS_is_TopofaRavine_Bank__c</fullName>
    <inlineHelpText>A ravine or within 30 metres of the top of a Ravine Bank</inlineHelpText>
    <label>Is Top of a Ravine Bank</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CVRD_DS_YES_NO</valueSetName>
    </valueSet>
</CustomField>