force-app/main/default/objects/MUSW__Application2__c/fields/CVRD_DS_Land_Title_Registration_Date__c.field-meta.xml
<CustomField>
    <fullName>CVRD_DS_Land_Title_Registration_Date__c</fullName>
    <label>Land Title Registration Date</label>
    <type>Date</type>
</CustomField>