force-app/main/default/objects/MUSW__Application2__c/fields/CVRD_DS_MOTI_File_Number__c.field-meta.xml
<CustomField>
    <fullName>CVRD_DS_MOTI_File_Number__c</fullName>
    <description>This field is created as part of internal application creation.</description>
    <inlineHelpText>eDAS File Number</inlineHelpText>
    <label>MOTI File Number</label>
    <length>30</length>
    <type>Text</type>
</CustomField>