force-app/main/default/objects/MUSW__Application2__c/fields/CVRD_DS_No_of_Lots__c.field-meta.xml
<CustomField>
    <fullName>CVRD_DS_No_of_Lots__c</fullName>
    <description>This field is created as part of Internal application creation.</description>
    <label>No of Lots</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>