force-app/main/default/objects/MUSW__Application2__c/fields/CVRD_DS_Parcel_2__c.field-meta.xml
<CustomField>
    <fullName>CVRD_DS_Parcel_2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parcel 2</label>
    <referenceTo>MUSW__Parcel__c</referenceTo>
    <relationshipLabel>Applications (Parcel 2)</relationshipLabel>
    <relationshipName>Applications</relationshipName>
    <type>Lookup</type>
</CustomField>