force-app/main/default/objects/MUSW__Application2__c/fields/CVRD_DS_Parcel_3__c.field-meta.xml
<CustomField>
    <fullName>CVRD_DS_Parcel_3__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parcel 3</label>
    <referenceTo>MUSW__Parcel__c</referenceTo>
    <relationshipLabel>Applications (Parcel 3)</relationshipLabel>
    <relationshipName>Applications1</relationshipName>
    <type>Lookup</type>
</CustomField>