force-app/main/default/objects/MUSW__Application2__c/fields/CVRD_DS_Parcel_Electoral_Area__c.field-meta.xml
<CustomField>
    <fullName>CVRD_DS_Parcel_Electoral_Area__c</fullName>
    <formula>MUSW__Parcel__r.CVRD_DS_Temp_Electoral_Area__c</formula>
    <label>Parcel Electoral Area</label>
    <type>Text</type>
</CustomField>