force-app/main/default/objects/MUSW__Application2__c/fields/CVRD_DS_Planner__c.field-meta.xml
<CustomField>
    <fullName>CVRD_DS_Planner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Planner</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>User.Title</field>
            <operation>equals</operation>
            <value>Planner</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Applications</relationshipName>
    <type>Lookup</type>
</CustomField>