force-app/main/default/objects/MUSW__Application2__c/fields/CVRD_DS_Preliminary_Auto_Number__c.field-meta.xml
<CustomField>
    <fullName>CVRD_DS_Preliminary_Auto_Number__c</fullName>
    <defaultValue>&quot;System Number&quot;</defaultValue>
    <label>Preliminary Auto Number</label>
    <length>80</length>
    <type>Text</type>
</CustomField>