force-app/main/default/objects/MUSW__Application2__c/fields/CVRD_DS_Provincial_Contact_Email__c.field-meta.xml
<CustomField>
    <fullName>CVRD_DS_Provincial_Contact_Email__c</fullName>
    <label>Provincial Contact Email</label>
    <type>Email</type>
</CustomField>