force-app/main/default/objects/MUSW__Application2__c/fields/CVRD_DS_Provincial_Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>CVRD_DS_Provincial_Contact_Name__c</fullName>
    <label>Provincial Contact Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>