force-app/main/default/objects/MUSW__Application2__c/fields/CVRD_DS_Provincial_Contact_Phone__c.field-meta.xml
<CustomField>
    <fullName>CVRD_DS_Provincial_Contact_Phone__c</fullName>
    <label>Provincial Contact Phone</label>
    <type>Phone</type>
</CustomField>