force-app/main/default/objects/MUSW__Application2__c/fields/CVRD_DS_Related_Application__c.field-meta.xml
<CustomField>
    <fullName>CVRD_DS_Related_Application__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Application</label>
    <referenceTo>MUSW__Application2__c</referenceTo>
    <relationshipLabel>Sub Applications</relationshipLabel>
    <relationshipName>Parent_Applications</relationshipName>
    <type>Lookup</type>
</CustomField>