force-app/main/default/objects/MUSW__Application2__c/fields/CVRD_DS_Review_Outcome__c.field-meta.xml
<CustomField>
    <fullName>CVRD_DS_Review_Outcome__c</fullName>
    <label>Review Outcome</label>
    <length>30</length>
    <type>Text</type>
</CustomField>