force-app/main/default/objects/MUSW__Application2__c/fields/CVRD_DS_Selected_DPAs__c.field-meta.xml
<CustomField>
    <fullName>CVRD_DS_Selected_DPAs__c</fullName>
    <label>Selected DPAs</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CVRD_DS_DPAs</valueSetName>
    </valueSet>
</CustomField>