force-app/main/default/objects/MUSW__Application2__c/fields/CVRD_DS_Site_Disclosure_Statement__c.field-meta.xml
<CustomField>
    <fullName>CVRD_DS_Site_Disclosure_Statement__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>A Site Disclosure Statement is required.</inlineHelpText>
    <label>Site Disclosure Statement</label>
    <type>Checkbox</type>
</CustomField>