force-app/main/default/objects/MUSW__Application2__c/fields/CVRD_DS_SiteDisclosureStatement__c.field-meta.xml
<CustomField>
    <fullName>CVRD_DS_SiteDisclosureStatement__c</fullName>
    <inlineHelpText>A Site Disclosure Statement is required.</inlineHelpText>
    <label>Site Disclosure Statement</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CVRD_DS_YES_NO</valueSetName>
    </valueSet>
</CustomField>