force-app/main/default/objects/MUSW__Application2__c/fields/CVRD_DS_Sub_Type__c.field-meta.xml
<CustomField>
    <fullName>CVRD_DS_Sub_Type__c</fullName>
    <label>Sub Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>MUSW__Type2__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>CVRD_DS_Sub_Type</valueSetName>
    </valueSet>
</CustomField>