force-app/main/default/objects/MUSW__Application2__c/fields/CVRD_DS_Units__c.field-meta.xml
<CustomField>
    <fullName>CVRD_DS_Units__c</fullName>
    <inlineHelpText>The number of units will be used to calculate application fees and any additional utility fees if applicable</inlineHelpText>
    <label>Number of Strata Units</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>