force-app/main/default/objects/MUSW__Application2__c/fields/CVRD_DSCommercialOrIndustrial_Purposes__c.field-meta.xml
<CustomField>
    <fullName>CVRD_DSCommercialOrIndustrial_Purposes__c</fullName>
    <inlineHelpText>The site is or has been used for Commercial Or Industrial Purposes.</inlineHelpText>
    <label>Commercial Or Industrial Purposes</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CVRD_DS_YES_NO</valueSetName>
    </valueSet>
</CustomField>