force-app/main/default/objects/MUSW__Application2__c/fields/CVRD_Fee_Receipt__c.field-meta.xml
<CustomField>
    <fullName>CVRD_Fee_Receipt__c</fullName>
    <label>Fee Receipt #</label>
    <length>25</length>
    <type>Text</type>
</CustomField>