force-app/main/default/objects/MUSW__Application2__c/fields/CVRD_RCRS_classification__c.field-meta.xml
<CustomField>
    <fullName>CVRD_RCRS_classification__c</fullName>
    <description>Records classification number</description>
    <inlineHelpText>Records classification number based on Application type</inlineHelpText>
    <label>RCRS classification #</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>MUSW__Type2__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>2450-20</fullName>
            </value>
            <value>
                <fullName>3015-30</fullName>
            </value>
            <value>
                <fullName>3060-20</fullName>
            </value>
            <value>
                <fullName>3090-20</fullName>
            </value>
            <value>
                <fullName>3320-20</fullName>
            </value>
            <value>
                <fullName>3360-20</fullName>
            </value>
            <value>
                <fullName>3045-20</fullName>
            </value>
            <value>
                <fullName>3045-40</fullName>
            </value>
            <value>
                <fullName>3300-20</fullName>
            </value>
            <value>
                <fullName>3040-20</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>