force-app/main/default/objects/MUSW__Application2__c/fields/CVRD_Registration_Date__c.field-meta.xml
<CustomField>
    <fullName>CVRD_Registration_Date__c</fullName>
    <label>Registration Date</label>
    <type>Date</type>
</CustomField>