force-app/main/default/objects/MUSW__Application2__c/fields/CVRD_Registration_Number__c.field-meta.xml
<CustomField>
    <fullName>CVRD_Registration_Number__c</fullName>
    <label>Registration Number</label>
    <length>25</length>
    <type>Text</type>
</CustomField>