force-app/main/default/objects/MUSW__Application2__c/fields/MUSW__Applicant__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Applicant__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to the Contact applicant associated with the application.</description>
    <label>Applicant</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Applications as Applicant</relationshipLabel>
    <relationshipName>Application2s</relationshipName>
    <type>Lookup</type>
</CustomField>