force-app/main/default/objects/MUSW__Application2__c/fields/MUSW__Status__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Status__c</fullName>
    <description>The current status of the application. This picklist can be defined according to the client&apos;s business processes.</description>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
                <default>true</default>
                <label>Pending</label>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Canceled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>