force-app/main/default/objects/MUSW__Application2__c/fields/MUSW__Type2__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Type2__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>MUSW__Application_Types</valueSetName>
    </valueSet>
</CustomField>