force-app/main/default/objects/MUSW__Application2__c/recordTypes/CVRD_DS_Agricultural_Land_Reserve.recordType-meta.xml
<RecordType>
    <fullName>CVRD_DS_Agricultural_Land_Reserve</fullName>
    <active>true</active>
    <label>Agricultural Land Reserve</label>
</RecordType>