force-app/main/default/objects/MUSW__Application2__c/recordTypes/CVRD_DS_Board_of_Variance.recordType-meta.xml
<RecordType>
    <fullName>CVRD_DS_Board_of_Variance</fullName>
    <active>true</active>
    <label>Board of Variance</label>
</RecordType>