force-app/main/default/objects/MUSW__Application2__c/recordTypes/CVRD_DS_Cannabis_License.recordType-meta.xml
<RecordType>
    <fullName>CVRD_DS_Cannabis_License</fullName>
    <active>true</active>
    <label>Cannabis  Retail Licence</label>
</RecordType>