force-app/main/default/objects/MUSW__Application2__c/recordTypes/CVRD_DS_Covenant_Amendment_or_Discharge.recordType-meta.xml
<RecordType>
    <fullName>CVRD_DS_Covenant_Amendment_or_Discharge</fullName>
    <active>true</active>
    <label>Covenant Amendment or Discharge</label>
</RecordType>