force-app/main/default/objects/MUSW__Application2__c/recordTypes/CVRD_DS_Crown_Land_Referrals.recordType-meta.xml
<RecordType>
    <fullName>CVRD_DS_Crown_Land_Referrals</fullName>
    <active>true</active>
    <label>Crown Land Referrals</label>
</RecordType>