force-app/main/default/objects/MUSW__Application2__c/recordTypes/CVRD_DS_Development_Permit.recordType-meta.xml
<RecordType>
    <fullName>CVRD_DS_Development_Permit</fullName>
    <active>true</active>
    <label>Development Permit</label>
</RecordType>