force-app/main/default/objects/MUSW__Application2__c/recordTypes/CVRD_DS_Flood_Management_Bylaw_Exemption.recordType-meta.xml
<RecordType>
    <fullName>CVRD_DS_Flood_Management_Bylaw_Exemption</fullName>
    <active>true</active>
    <label>Flood Management Bylaw Exemption</label>
</RecordType>