force-app/main/default/objects/MUSW__Application2__c/recordTypes/CVRD_DS_Land_Use_Contract_Amendment_or_Discharge.recordType-meta.xml
<RecordType>
    <fullName>CVRD_DS_Land_Use_Contract_Amendment_or_Discharge</fullName>
    <active>false</active>
    <label>Land Use Contract Amendment or Discharge</label>
</RecordType>