force-app/main/default/objects/MUSW__Application2__c/recordTypes/CVRD_DS_Liquor_Cannabis_Licence_Referrals.recordType-meta.xml
<RecordType>
    <fullName>CVRD_DS_Liquor_Cannabis_Licence_Referrals</fullName>
    <active>true</active>
    <label>Liquor Licence Referrals</label>
</RecordType>