force-app/main/default/objects/MUSW__Application2__c/recordTypes/CVRD_DS_Minimum_Frontage_Exemption.recordType-meta.xml
<RecordType>
    <fullName>CVRD_DS_Minimum_Frontage_Exemption</fullName>
    <active>true</active>
    <label>Minimum Frontage Exemption</label>
</RecordType>