force-app/main/default/objects/MUSW__Application2__c/recordTypes/CVRD_DS_OCP_Zoning_or_Land_Use_Bylaw_Amendment.recordType-meta.xml
<RecordType>
    <fullName>CVRD_DS_OCP_Zoning_or_Land_Use_Bylaw_Amendment</fullName>
    <active>true</active>
    <label>OCP, Zoning or Land Use Bylaw Amendment</label>
</RecordType>