force-app/main/default/objects/MUSW__Application2__c/recordTypes/CVRD_DS_Phased_Development_Agreement.recordType-meta.xml
<RecordType>
    <fullName>CVRD_DS_Phased_Development_Agreement</fullName>
    <active>true</active>
    <label>Phased Development Agreement</label>
</RecordType>