force-app/main/default/objects/MUSW__Application2__c/recordTypes/CVRD_DS_Strata_Conversion.recordType-meta.xml
<RecordType>
    <fullName>CVRD_DS_Strata_Conversion</fullName>
    <active>true</active>
    <label>Strata Conversion</label>
</RecordType>