force-app/main/default/objects/MUSW__Application2__c/recordTypes/CVRD_DS_Subdivision_Referral.recordType-meta.xml
<RecordType>
    <fullName>CVRD_DS_Subdivision_Referral</fullName>
    <active>true</active>
    <label>Subdivision (Referral)</label>
</RecordType>