force-app/main/default/objects/MUSW__Application2__c/recordTypes/CVRD_DS_Telecommunication_Antenna_Structure.recordType-meta.xml
<RecordType>
    <fullName>CVRD_DS_Telecommunication_Antenna_Structure</fullName>
    <active>true</active>
    <label>Telecommunication Antenna Structure</label>
</RecordType>