force-app/main/default/objects/MUSW__Application2__c/recordTypes/CVRD_DS_Temporary_Use_Permit.recordType-meta.xml
<RecordType>
    <fullName>CVRD_DS_Temporary_Use_Permit</fullName>
    <active>true</active>
    <label>Temporary Use Permit</label>
</RecordType>