force-app/main/default/objects/MUSW__Application2__c/validationRules/Applicant_Owner_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Applicant_Owner_Required</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK( MUSW__Applicant__c )</errorConditionFormula>
    <errorDisplayField>MUSW__Applicant__c</errorDisplayField>
    <errorMessage>Applicant/Owner is Required.</errorMessage>
</ValidationRule>