force-app/main/default/objects/MUSW__Application2__c/validationRules/Environmental_Management_Act.validationRule-meta.xml
<ValidationRule>
    <fullName>Environmental_Management_Act</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    ISPICKVAL(CVRD_DSCommercialOrIndustrial_Purposes__c, &quot;Yes&quot;),
    ISPICKVAL(CVRD_DS_SiteDisclosureStatement__c, &quot;&quot;)
)</errorConditionFormula>
    <errorDisplayField>CVRD_DS_SiteDisclosureStatement__c</errorDisplayField>
    <errorMessage>If Commercial Or Industrial Purposes is YES, Site Disclosure Statement is required.</errorMessage>
</ValidationRule>