force-app/main/default/objects/MUSW__Application2__c/validationRules/Read_only_for_Application_Number.validationRule-meta.xml
<ValidationRule>
    <fullName>Read_only_for_Application_Number</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    OR(
        $Profile.Name = &apos;CVRD Community Login User&apos;,
        $Profile.Name = &apos;CVRD Citizen Login User&apos;
    ),
    ISCHANGED(Name)
)</errorConditionFormula>
    <errorDisplayField>Name</errorDisplayField>
    <errorMessage>You Can&apos;t Edit the Application Number.</errorMessage>
</ValidationRule>